--- a/学习第一章.md
+++ b/学习第一章.md
@@ -1,6 +1,6 @@
 第一次接触到JavaScript，了解到这是一个前端语言。相对的，Python是后端语言。
 
-1.1 基础语法
+### 1.1 基础语法
 
 const hello : string = "Hello World!"
 console.log(hello)
@@ -8,7 +8,7 @@ console.log(hello)
 console.log是输出，打印，功能和Python的print一样
 
 
-数据类型：
+## 数据类型：
 number：双精度 64 位浮点值。它可以用来表示整数和浮点数。TS中没有int和float，只有一个number。
 
 string：一个字符系列，使用单引号（'）或双引号（"）来表示字符串类型。反引号（`）来定义多行文本和内嵌表达式。
