--- a/学习第一章.md
+++ b/学习第一章.md
@@ -1,6 +1,6 @@
 第一次接触到JavaScript，了解到这是一个前端语言。相对的，Python是后端语言。
 
-### 1.1 基础语法
+## 1.1 基础语法
 
 const hello : string = "Hello World!"
 console.log(hello)
@@ -8,7 +8,7 @@ console.log(hello)
 console.log是输出，打印，功能和Python的print一样
 
 
-## 数据类型：
+### 1.1 数据类型：
 number：双精度 64 位浮点值。它可以用来表示整数和浮点数。TS中没有int和float，只有一个number。
 
 string：一个字符系列，使用单引号（'）或双引号（"）来表示字符串类型。反引号（`）来定义多行文本和内嵌表达式。
@@ -16,3 +16,120 @@ string：一个字符系列，使用单引号（'）或双引号（"）来表示
 boolean：表示逻辑值：true 和 false。
 
 enum：枚举类型用于定义数值集合。
+
+```typescript
+enum Color {Red, Green, Blue};
+let c: Color = Color.Blue;
+console.log(c);    // 输出 2
+```
+这里输出2是因为，枚举的数值是从0开始数的，和Python一样，所以第三个Blue的值为2  （0,1,2）
+
+还有， let c:color 意味着c必须是color这个枚举里的有效值。在typescript中，枚举的成员实际上是常量值，默认是数字，所以color这个枚举里的实际内容是（0,1,2）
+
+### TypeScript 变量声明
+
+var用来声明变量，可以在声明的时候定义类型和赋值，也可以不给类型和初始值。如果不给，类型可以是任何类型，初始值是undefined
+
+### 变量作用域
+
+```typescript
+var global_num = 12          // 全局变量
+class Numbers { 
+   num_val = 13;             // 实例变量
+   static sval = 10;         // 静态变量
+   
+   storeNum():void { 
+      var local_num = 14;    // 局部变量
+   } 
+} 
+console.log("全局变量为: "+global_num)  
+console.log(Numbers.sval)   // 静态变量
+var obj = new Numbers(); 
+console.log("实例变量: "+obj.num_val)
+```
+
+这个地方研究了很久。
+
+首先学习了什么叫类。类就是一个独立的东西，你先给它一个名字，然后在里边可以塞上一大堆东西，静态变量啦，定义变量，局部变量啦。
+
+静态变量就相当于是类里边的全局变量，所有实例都用同一个静态变量。它用static 这个命令建立。静态变量也是可以修改的。
+
+实例变量不能直接调用。要先new一个对象出来，然后用这个new出来的对象来输出。
+
+局部变量说是只能在类里边用，不过这个例子里没有调用。
+
+
+## 1.2 运算符
+
+### 算数运算符
+
++-*/   加减乘除， % 求余数，   ++和-- 是自增和自减，就是自己加1和自己减1，只能是1
+
+### 关系运算符
+
+关系运算符用于计算结果是否为 true 或者 false。包括==、!=、<、>、<=、>=
+
+```typescript
+var num1:number = 5;
+var num2:number = 9;
+ 
+console.log("num1 的值为: "+num1); 
+console.log("num2 的值为:"+num2);
+ 
+var res = num1>num2 
+console.log("num1 大于n num2: "+res)
+ 
+res = num1<num2 
+console.log("num1 小于 num2: "+res)  
+ 
+res = num1>=num2 
+console.log("num1 大于或等于  num2: "+res)
+ 
+res = num1<=num2
+console.log("num1 小于或等于 num2: "+res)  
+ 
+res = num1==num2 
+console.log("num1 等于 num2: "+res)  
+ 
+res = num1!=num2  
+console.log("num1 不等于 num2: "+res)
+```
+
+在这个例子里，当给res用关系运算符赋值后，它直接就被赋予了true或者false. 
+
+Var res 只用声明变量一次，后面每次不用var， 直接给res赋值就行。
+
+
+###逻辑运算符
+
+&&和||是两个不同的运算符，&&要求两侧都为true才是true，否则就是false。||两侧只要有一个true就是true。!用来取一个相反的布尔值
+
+
+### 赋值运算符
+
+a += b 等效于 a = a + b；
+
+a -= b 等效于 a = a - b
+
+a *= b 等效于 a = a * b
+
+a /=b 等效于 a = a / b
+
+在这个例子里，a的值是不断更新并向下传递到下一个运算里的。
+
+
+### 三元运算符
+
+条件（三元）运算符 ? : 用于根据条件的真假选择两个值中的一个。格式为：条件 ? 结果1 : 结果2。
+
+如果条件为 true，结果是 结果1；如果条件为 false，结果是 结果2。
+
+
+### 连接运算符
+
++ 可以用来拼接两个字符串
+
+
+### 类型运算符
+
+typeof用来判断变量的类型
