--- a/学习第二章.md
+++ b/学习第二章.md
@@ -1,1 +1,43 @@
 ## if语句
+
+所有编程语言里的基本语法，好理解
+
+## if...else
+
+好理解
+
+## if……else if……else
+
+我当时想到一个情况，如果第一个和第二个语句都true，会怎样。测试了一下，如果前一个true被执行了，后面的会全被忽略掉，即使还有true也不会再执行
+
+## switch 语句
+
+这个就可以解决我前一个想法，可以执行多个符合条件的情况。
+我对switch的语法有另一个猜想，如果没有break，会怎样。在教程给的示例里：
+
+```typescript
+var grade:string = "A"; 
+switch(grade) { 
+    case "A": { 
+        console.log("优"); 
+        break; 
+    } 
+    case "B": { 
+        console.log("良"); 
+        break; 
+    } 
+    case "C": {
+        console.log("及格"); 
+        break;    
+    } 
+    case "D": { 
+        console.log("不及格"); 
+        break; 
+    }  
+    default: { 
+        console.log("非法输入"); 
+        break;              
+    } 
+}
+```
+
