--- a/学习第二章.md
+++ b/学习第二章.md
@@ -1,16 +1,19 @@
-## if语句
+## 2.1 条件语句
+
+
+### if语句
 
 所有编程语言里的基本语法，好理解
 
-## if...else
+### if...else
 
 好理解
 
-## if……else if……else
+### if……else if……else
 
 我当时想到一个情况，如果第一个和第二个语句都true，会怎样。测试了一下，如果前一个true被执行了，后面的会全被忽略掉，即使还有true也不会再执行
 
-## switch 语句
+### switch 语句
 
 这个就可以解决我前一个想法，可以执行多个符合条件的情况。
 我对switch的语法有另一个猜想，如果没有break，会怎样。在教程给的示例里：
@@ -41,3 +44,30 @@ switch(grade) {
 }
 ```
 
+我先试着删除了第一个case里的break，输出结果是第一个case和第二个case里的优和良都被输出了；为什么呢？为什么第二个case的条件不符合也会执行呢？我继续把grade的初始值改为B，继续执行，结果是只输出了良，那说明确实要case为true才会执行。那么为什么刚才会同时执行第一个和第二个case呢？
+
+我找chatgpt问了才理解，在switch语句里，只要第一次有case为true，程序就会开始执行后续的所有case，此时不再判断后续的case是否为true，直到遇到break才会停。
+
+这个是switch的贯穿特性（fall-through）。那这个特性有什么用呢？我想了一下，设计了这个场景正好用上：假设，皇帝要奖赏，一共有五种功劳，一等功最高，五等功最低；有五档奖励，第一档到第五档，一等功可以获得一档到五档全部奖励，二等功只能获得二档到五档的全部奖励，而五等功只能获得第五档的奖励。这个时候就可以用switch语句来判断，case按顺序从一等功到五等功排列，有五个case，每个case的命令是对应档次的奖励，每个case里都没有break。这样从一到五判断，任何一个case符合了，之后的所有奖励就都可以获得
+
+```typescript
+var merit = 1; // 假设1等功最高，5等功最低
+
+switch (merit) {
+    case 1:
+        console.log("获得第一档奖励");
+    case 2:
+        console.log("获得第二档奖励");
+    case 3:
+        console.log("获得第三档奖励");
+    case 4:
+        console.log("获得第四档奖励");
+    case 5:
+        console.log("获得第五档奖励");
+        break; // 结束 switch
+    default:
+        console.log("无功劳，无奖励");
+}
+```
+
+代码是chatgpt根据我的想法给出的
