--- a/学习第二章.md
+++ b/学习第二章.md
@@ -71,3 +71,47 @@ switch (merit) {
 ```
 
 代码是chatgpt根据我的想法给出的
+
+
+
+## 循环
+
+循环是编程的基本意义之一，将重复动作自动化
+
+### for 循环
+
+```typescript
+for ( init; condition; increment ){
+    statement(s);
+}
+```
+
+这个格式比python复杂一点。要记住init是只执行一次的，并且第一次循环时不执行increment；后面有点绕脑子，从第二次开始，先跳到increment执行完，在从右往左，去判定condition，之后每一次都是这个顺序。
+
+### for……in循环
+
+这个命令是用来历遍属性名的，也可以历遍索引
+
+### for……of，for each every some
+
+for of可以直接历遍元素，而for each会有三个固定参数回传，当前元素值，当前索引，原始数组
+
+some方法用于测试数组中是否至少有一个元素通过了由提供的函数实现的测试。
+
+### while 循环
+
+只要条件符合，while会一直循环
+
+需要在while的循环主体里加入改变条件的语句来控制循环次数
+
+### do  while 循环
+
+先do一次再判断，条件符合就一直do下去
+
+### break
+
+终止循环
+
+### continue
+
+中止本次循环，但不跳出整个循环，返回到条件判断
