--- a/学习第三章.md
+++ b/学习第三章.md
@@ -1,6 +1,6 @@
 ## 数据类型
 
-### number
+### 3.1 number
 number 类型是数值，整数和浮点数都是这个类型
 
 内置属性
@@ -31,7 +31,7 @@ Number.prototype.toString(radix)：将数字转换为字符串。可以指定基
 
 number不是高精度的数值类型，对于需要非常高精度的计算可能会有问题
 
-### string
+### 3.2字符串 string
 文本，用''(单引号) 或 "" (双引号) 表达，还可以用 ```三个反引号多行输入
 
 内置属性：
@@ -40,12 +40,96 @@ length:
 
 内置方法
 .charAt 指定索引位置的字符  ；.charCodeAt 指定索引位置的字符的 Unicode 编码；.concat   连接两个或多个字符串，并返回一个新字符串
+
 .indexOf  返回字符串中第一次出现指定值的索引，如果没有找到则返回 -1
+
 .slice  ；.substring    都是提取字符串片段
+
 slice 和 substring 的区别，slice支持负索引， substring 支持如果第一个参数大于第二个参数就自动交换。这两个相近功能同时存在的原因是，substring是早期就存在的功能，后来又加入了slice，因为要向后兼容，所以都保留了
+
 .toUpperCase 转换为大写，.toLowerCase 转换为小写
 
-### Array 数组
+### 3.3 Array 数组
 相同类型元素的一个集合，比如 let arr: number[] = [1, 2, 3, 4, 5]
+内置属性，length，数组长度，就是里边有几个元素
+
+内置方法：
+push，添加元素到末尾
+```typescript
+let arr: number[] = [1, 2, 3];
+arr.push(4, 5);
+console.log(arr); // 输出 [1, 2, 3, 4, 5]
+```
+
+pop 移除末尾的一个元素，并生成一个新的变量
+```typescript
+let arr: number[] = [1, 2, 3, 4, 5];
+let lastElement = arr.pop();
+console.log(lastElement); // 输出 5
+console.log(arr); // 输出 [1, 2, 3, 4]
+```
+
+shift 移除第一个元素，同上
+```typescript
+let arr: number[] = [1, 2, 3, 4, 5];
+let firstElement = arr.shift();
+console.log(firstElement); // 输出 1
+console.log(arr); // 输出 [2, 3, 4, 5]
+```
+
+indexOf   返回数组中第一次出现指定元素的索引，如果没有找到则返回 -1
+
+splice 从数组中移除元素，并在指定位置添加新的元素
+```typescript
+arr.splice(2, 1, 6); // 从索引 2 开始移除一个元素，然后添加元素 6
+```
+
+slice  提取数组的一个片段，并返回一个新数组
+```typescript
+let arr: number[] = [1, 2, 3, 4, 5];
+let slicedArr = arr.slice(1, 4);
+console.log(slicedArr); // 输出 [2, 3, 4]
+```
+包含第一个参数的索引，但不包含第二个参数
+
+forEach   对每个元素执行一次提供的函数
+```typescript
+let arr: number[] = [1, 2, 3, 4, 5];
+arr.forEach((value, index) => {
+  console.log(`Index: ${index}, Value: ${value}`);
+});
+// 输出:
+// Index: 0, Value: 1
+// Index: 1, Value: 2
+// Index: 2, Value: 3
+// Index: 3, Value: 4
+// Index: 4, Value: 5
+```
+这个例子里，value和index是可以随便命名的，不是特殊参数，但是这两个变量的位置固定是元素的值和索引。${}是插值的简便写法。
+这个例子的逻辑是，每次先给value和index两个变量赋值为参数的值和索引，再用打印命令把它们打印出来；forEach命令会历遍所有元素，每个元素执行一遍
+
+
+### 3.4 Map 对象
+Map 是一种键-值对的集合，其中键和值可以是任意类型
+
+理解了一下，就是一个对象，里边有很多对，每对包含两个值，前一个值叫key，后一个值叫value，两个在一起是一个键值对，然后这个map对象里可以有很多个键值对，其次map对象里的键和值可以是任意类型
+
+（但是还不明白这个东西是做什么用的）
+
+有一些内置方法：
+set 是添加键值对
+```typescript
+let myMap = new Map<string, number>();
+myMap.set("one", 1);
+myMap.set("two", 2);
+```
+
+get  根据键获取值，键不存在就返回undefined
+```typescript
+let myMap = new Map<string, number>();
+myMap.set("one", 1);
+console.log(myMap.get("one")); // 输出 1
+console.log(myMap.get("three")); // 输出 undefined
+```
 
 
