--- a/学习第三章.md
+++ b/学习第三章.md
@@ -132,4 +132,34 @@ console.log(myMap.get("one")); // 输出 1
 console.log(myMap.get("three")); // 输出 undefined
 ```
 
+has 检查是否有这个键
+```typescript
+let myMap = new Map<string, number>();
+myMap.set("one", 1);
+console.log(myMap.has("one")); // 输出 true
+console.log(myMap.has("three")); // 输出 false
+```
+
+delete 移除指定键，不存在就返回false
+```typescript
+let myMap = new Map<string, number>();
+myMap.set("one", 1);
+console.log(myMap.delete("one")); // 输出 true
+console.log(myMap.delete("three")); // 输出 false
+```
+
+clear 清除所有键值对
+
+foreach    对每个键值对执行一次函数
+
+keys 返回一个包含map中所有键的迭代器
+意思就是说，生成一个集合，里边按顺序包含所有键
+
+values 返回值的迭代器
+
+entries 返回键值对的迭代器。看起来就是原来的map，实际上不是，它只是一个方法，用entries生成的集合，不能使用map的内置命令，可以用next顺序访问
+
+
+
+### 3.5 元组
 
