--- a/学习第三章.md
+++ b/学习第三章.md
@@ -163,3 +163,21 @@ entries 返回键值对的迭代器。看起来就是原来的map，实际上不
 
 ### 3.5 元组
 
+tuple元组，每个元素类型可以不同的集合
+内置属性：length，长度
+
+内置方法
+contact 联合多个数组或值，返回新数组
+
+joing 将元组内所有元素串联成一个字符串，可以指定分隔符
+
+slice 切片，提取指定索引范围内的元素，包含第一个参数，不提取后一个参数位置的元素
+
+string 元组转为字符串，就是不再是数组了，所有元素合并为一个字符串
+
+indexOf   找指定元素的索引，没有就返回-1
+
+push    在末尾添加元素
+
+pop  移除最后一个元素，并把它生成一个新的变量
+
