--- a/学习第三章.md
+++ b/学习第三章.md
@@ -181,3 +181,41 @@ push    在末尾添加元素
 
 pop  移除最后一个元素，并把它生成一个新的变量
 
+
+### 3.6 联合变量
+
+意思是在TS里，可以是一个字符串或一个数字，但它不能同时是这两种类型
+
+typeof  类型保护
+用来判断是什么类型
+
+类型断言
+明确字符类型
+as ……
+```typescript
+let value: string | number = "Hello";
+let len = (value as string).length; // 在这里使用类型断言将 value 明确指定为字符串类型
+console.log(len); // 输出 5
+```
+
+共有属性检查
+就是说一个变量在字符串或者数字的不同类型时候可以用同一个方法
+
+函数重载
+通过函数重载定义多个函数签名，使 TypeScript 能够根据输入值的类型正确调用相应的函数
+```typescript
+function processValue(value: string): void;
+function processValue(value: number): void;
+function processValue(value: string | number): void {
+  if (typeof value === "string") {
+    console.log(value.toUpperCase());
+  } else {
+    console.log(value.toFixed(2));
+  }
+}
+
+processValue("Hello"); // 调用第一个函数签名，"HELLO" 
+processValue(42); // 调用第二个函数签名，"42.00"
+```
+
+我其实不太理解这个重载的意义，我觉得是重复多余的，(value: string | number)  这里就把上边两句都包括了。而且我在运行里把上边两句删掉没有影响。但是chatgpt说重载是不多余的，是可以增加类型安全和清晰性（？？？我不懂，估计要实际编程了才能明白）
