--- a/学习第四章.md
+++ b/学习第四章.md
@@ -1,6 +1,13 @@
 ## TS面向对象
 ## 4.1 接口
 
+接口的定义方法：
+```typescript
+interface interface_name { 
+}
+```
+
+
 接口是把一些属性和方法先定一个在一个“接口”的代码块里。有点难理解它的作用，比如作者给的例子：
 ```typescript
 interface IPerson { 
@@ -40,3 +47,40 @@ console.log(employee.lastName)
 ```
 在这个例子里，我觉得先定义接口看起来比较多余。我试着把定义IPerson接口的代码删除掉，运行后输出的结果是一样的。
 而询问了chatgpt，它说接口是用来做属性检查的，因为typescript里的代码最后都要编译成javascript才能用，如果定义的对象在调用接口时，少了一个属性或者定义对象的属性和接口定义的不一样，再编译时就会报错。这样先定义一个接口，再大量调用它时就能保证属性个数和类型始终一致。
+
+### 联合类型和接口
+教学例子：
+```typescript
+interface RunOptions { 
+    program:string; 
+    commandline:string[]|string|(()=>string); 
+} 
+ 
+// commandline 是字符串
+var options:RunOptions = {program:"test1",commandline:"Hello"}; 
+console.log(options.commandline)  
+ 
+// commandline 是字符串数组
+options = {program:"test1",commandline:["Hello","World"]}; 
+console.log(options.commandline[0]); 
+console.log(options.commandline[1]);  
+ 
+// commandline 是一个函数表达式
+options = {program:"test1",commandline:()=>{return "**Hello World**";}}; 
+ 
+var fn:any = options.commandline; 
+console.log(fn());
+
+// Hello
+// Hello
+// World
+// **Hello World**
+```
+这里有一个比较神奇的使用方法，可以在定义的时候用 | 符号把所有的类型都包括进去
+
+此外，第三个输出的时候，先定义一个变量，给它赋值为options.commandline的函数返回结果，再输出。这样太繁琐了。
+
+可以直接输出的，用 console.log(options.commandline()) 就行，这里注意是commandline后边要跟一个括号，如果没有这个括号，就会把函数本身给输出出来，而不是运行结果。
+
+作者这么写应该是为了照顾初学者。
+
