--- a/学习第四章.md
+++ b/学习第四章.md
@@ -82,5 +82,39 @@ console.log(fn());
 
 可以直接输出的，用 console.log(options.commandline()) 就行，这里注意是commandline后边要跟一个括号，如果没有这个括号，就会把函数本身给输出出来，而不是运行结果。
 
-作者这么写应该是为了照顾初学者。
+作者这么写应该是为了照顾我这样的初学者。
 
+
+### 接口和数组
+在接口里写一对[]  方括号就是数组了
+```typescript
+interface namelist { 
+   [index:number]:string 
+} 
+```
+这样定义就是看起来全面一点
+
+
+### 接口继承
+把一个接口里的内容放到另一个接口里去
+
+```typescript
+Child_interface_name extends super_interface1_name, super_interface2_name,…,super_interfaceN_name
+```
+
+多继承实例
+```typescript
+interface IParent1 { 
+    v1:number 
+} 
+ 
+interface IParent2 { 
+    v2:number 
+} 
+ 
+interface Child extends IParent1, IParent2 { } 
+var Iobj:Child = { v1:12, v2:23} 
+console.log("value 1: "+Iobj.v1+" value 2: "+Iobj.v2)
+
+// value 1: 12 value 2: 23
+```
