--- a/学习第四章.md
+++ b/学习第四章.md
@@ -118,3 +118,44 @@ console.log("value 1: "+Iobj.v1+" value 2: "+Iobj.v2)
 
 // value 1: 12 value 2: 23
 ```
+
+
+## 4.2 类
+
+类用class 来定义
+```typescript
+class class_name { 
+    // 类作用域
+}
+```
+
+教学示例:
+```python
+class Car { 
+   // 字段
+   engine:string; 
+   
+   // 构造函数
+   constructor(engine:string) { 
+      this.engine = engine 
+   }  
+   
+   // 方法
+   disp():void { 
+      console.log("函数中显示发动机型号  :   "+this.engine) 
+   } 
+} 
+ 
+// 创建一个对象
+var obj = new Car("XXSY1")
+ 
+// 访问字段
+console.log("读取发动机型号 :  "+obj.engine)  
+ 
+// 访问方法
+obj.disp()
+
+// 读取发动机型号 :  XXSY1
+// 函数中显示发动机型号  :   XXSY1
+```
+
