--- a/学习第四章.md
+++ b/学习第四章.md
@@ -159,3 +159,26 @@ obj.disp()
 // 函数中显示发动机型号  :   XXSY1
 ```
 
+这里有好几个要注意的点。
+
+
+这个类里边的顺序是：字段、构造函数、方法。
+
+在一个类里构造函数只能有一个，它是一个特殊的函数，用constructor命令来定义，用来给属性赋值。
+
+属性就是一开始的字段。属性可以有多个。
+
+方法是用来执行的函数，可以有多个。在类里，可以很简洁的直接写 function_name(){  ，比如这里的disp(){  。这种写法只能在类里边，在类外边声明函数还是要先加上function、const、let
+
+这里有个void是因为这个函数不用返回任何值，只是执行一个动作。
+
+这里的逻辑和顺序是，new car的时候，传入了xxsy1这个参数，它先被传给构造函数，被赋值给构造函数的参数，然后传入到构造函数的主体  this.engine=engine 。这里右边的engine是被传入的xxsy1,然后被赋值给this.engine.
+
+this是一个特殊的关键字，表示当前的类。this.engine就是类里边被定义的那个叫engine的属性
+
+但凡在这个类里有this.   就代表这个类的某属性，这里赋值之后，在这个类里边，所有的this.engine都是xxsy1了
+
+还有，在这个类里，虽然只能有一个构造函数，但是构造函数可以有多个参数，就是用函数重载的方式。而重载的时候可以定义不同参数的类型，那么实例化类的时候，传入的参数会按照类型被自动分配；
+
+如果重载的构造函数有类型一样的函数，它们会按照传入顺序被分配
+
