--- a/学习第五章.md
+++ b/学习第五章.md
@@ -13,3 +13,34 @@
 想象一下你在加载一个网站，应用程序需要从服务器获取用户数据。如果你等着数据返回再做其他事情，整个页面可能会卡住不动。但通过异步编程，你可以让用户在后台加载数据的同时，继续与页面的其他部分进行交互。
 在 TypeScript 中，你可以用 Promise 和 async/await 来写异步代码。Promise 是一个对象，表示一个未来的值（可能当下并不可用）。而 async/await 则使得异步代码看起来更简洁、易读。
 ```
+
+教程示例，async function：
+```typescript
+async function asyncOperation(): Promise<string> {
+    return Promise.resolve("Hello, async world!");
+}
+ 
+async function run() {
+    const result = await asyncOperation();
+    console.log(result);  // "Hello, async world!"
+}
+ 
+run();
+```
+在上述代码中，asyncOperation 是一个异步函数，返回一个 Promise。在 run 函数中，我们使用 await 关键字来等待 asyncOperation 的结果。
+
+```typescript
+async function asyncOperation(): Promise<number> {
+    return new Promise((resolve, reject) => {
+        setTimeout(() => resolve(10), 100);
+    });
+}
+ 
+async function run() {
+    const result = await asyncOperation();
+    console.log(result);  // 10
+}
+ 
+run();
+```
+在这个例子中，asyncOperation 返回一个 Promise，该 Promise 将在100毫秒后解决，并返回数字10。
