--- a/学习第五章.md
+++ b/学习第五章.md
@@ -44,3 +44,30 @@ async function run() {
 run();
 ```
 在这个例子中，asyncOperation 返回一个 Promise，该 Promise 将在100毫秒后解决，并返回数字10。
+
+
+```typescript
+async function asyncOperation1(): Promise<number> {
+    return new Promise((resolve) => {
+        setTimeout(() => resolve(10), 1000);
+    });
+}
+ 
+async function asyncOperation2(): Promise<number> {
+    return new Promise((resolve) => {
+        setTimeout(() => resolve(20), 1000);
+    });
+}
+ 
+async function run() {
+    const result1 = await asyncOperation1();
+    const result2 = await asyncOperation2();
+    console.log(result1 + result2);  // 30
+}
+ 
+run();
+```
+
+在 asyncOperation1 和 asyncOperation2 中，setTimeout 的回调函数会在 1000 毫秒（即 1 秒）后执行。
+然后，resolve(10) 和 resolve(20) 分别会在 1 秒后执行，Promise 会在那个时候解决。
+因此，在 run 函数中，await asyncOperation1() 和 await asyncOperation2() 各自等待 1 秒，结果相加后输出 30。
